--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Profiler Sample App</string>
+    <string name="label_launch_activity">Launch Activity</string>
 </resources>
